--- a/ImageToSloaganGenerator.ipynb
+++ b/ImageToSloaganGenerator.ipynb
@@ -808,11 +808,18 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.11.0 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.11.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aa64dc019f45d310dd4bf033bce97b2fefd4e2c39722d9dab93db684be4fcf3c"
+      }
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
